# streamlit-dashboard

./: README.md  pyproject.toml  run_app.sh
src/streamlit_segy/gui/: app.py
src/streamlit_segy/utils/: segy_analyzer.py
